<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F2"
    android:foregroundTint="@color/black"
    android:textAlignment="center"
    tools:context="br.com.segundotrab.appListaDeCompras.FormularioActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:text="@string/textNome"

        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etNome"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="238dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="#F4F2F2"
        android:ems="20"
        android:hint="@string/textNomeHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/textPreco"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPreco"
        android:layout_width="238dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:background="#F4F2F2"
        android:ems="10"
        android:hint="@string/textPrecoHint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/textQuantidade"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etQuantidade"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="238dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="#F4F2F2"
        android:hint="@string/textQuantidadeHint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPreco" />

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="104dp"
        android:background="#F8F8F8"
        android:backgroundTint="#DFE0E4"
        android:entries="@array/arrayCategoria"
        android:foregroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuantidade" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:background="#B45C8C25"
        android:text="@string/btnSalvar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCategoria"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="#B45C8C25"
        android:text="@string/toolbartxt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
